# ssec-sentinel

./: .env.example  .gitignore  .vercelignore  Procfile  README.md  TRANSPARENCY.md  clean_empty_files.py  find_empty_files.py  index.html  pyproject.toml  render.json  render.yaml  requirements.txt  vercel-requirements.txt  vercel.json  wsgi.py
api/: index.py
backend/: index.html  requirements.txt  ssec_app.py  ssec_app_backup.py  ssec_config.py
backend/collectors/: ssec_acled.py  ssec_flights.py  ssec_hdx.py  ssec_heatmap.py  ssec_helplines_enhanced.py  ssec_military.py  ssec_signals.py  ssec_views.py
frontend/: index.html  radio-fix.js
frontend/js/: ssec-sources.js
public/: index.html
public/js/: ssec-signals.js
