[project]
name = "ssec-sentinel"
version = "0.3.0"
description = "Emergency Intelligence Platform"
authors = [
    {name = "SSEC", email = "info@ssec.org"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "httpx==0.25.1",
    "aiohttp==3.9.1",
    "python-dotenv==1.0.0",
    "pydantic==2.5.0",
    "cachetools==5.3.2",
    "loguru==0.7.2",
    "requests==2.31.0",
    "python-multipart==0.0.6"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
